crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__small_multi_schema_sequential_snapshot@small_multi_schema_sequential_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type Users struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    DisplayName *string `gorm:"column:display_name;type:text" json:"display_name"`
    Posts []Posts `gorm:"foreignKey:UserID" json:"-"`
}

func (Users) TableName() string { return "users" }


type Posts struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    UserID int32 `gorm:"column:user_id;not null" json:"user_id"`
    User Users `gorm:"foreignKey:UserID" json:"-"`
    Title string `gorm:"column:title;not null;type:text" json:"title"`
}

func (Posts) TableName() string { return "posts" }
