crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__string_default_snapshot@string_default_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class StringDefaults(models.Model):
    id = models.IntegerField(primary_key=True)
    status = models.TextField(default="active")

    class Meta:
        db_table = "string_defaults"
