crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__string_default_snapshot@string_default_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type StringDefaults struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    Status string `gorm:"column:status;not null;type:text;default:'active'" json:"status"`
}

func (StringDefaults) TableName() string { return "string_defaults" }
