crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__string_default_snapshot@string_default_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model StringDefaults {
  id Int @id
  status String @default("active") @db.Text

  @@map("string_defaults")
}
