crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_level_pk_snapshot@table_level_pk_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Orders {
  id String @id @db.Uuid
  customer_id String @db.Uuid
  total Float @db.Real

  @@map("orders")
}
